Finish reports, start aws and dockerization

--- a/be/src/main/resources/templates/employee-matrix.mustache
+++ b/be/src/main/resources/templates/employee-matrix.mustache
@@ -12,10 +12,13 @@
             margin: 20mm;
         }
 
+        /* Fallbacks: first try embedded font, then system fonts */
         body {
-            font-family: "DejaVu Sans", sans-serif;
-            color: #333333;
-            font-size: 12pt;
+          font-family: "PT Mono";
+          font-size: 11pt;
+          color: #1f2933;
+          line-height: 1.45;
+          margin: 0;
         }
 
         h1 {
