--- a/ui/src/app/reports/report-modal/report-modal.component.html
+++ b/ui/src/app/reports/report-modal/report-modal.component.html
@@ -37,7 +37,7 @@
         </small>
       </div>
 
-      <div class="field" *ngIf="isCocReport">
+      <div class="field" *ngIf="showProjectField">
         <label for="projectId" class="field-label">Project *</label>
         <p-dropdown
           id="projectId"
