--- a/ui/src/app/projects/projects.component.html
+++ b/ui/src/app/projects/projects.component.html
@@ -1,65 +1,69 @@
-<div class="projects-container">
-  <div class="header">
-    <h1>Projects</h1>
-    <p-button 
-      label="Create Project" 
-      icon="pi pi-plus" 
-      (onClick)="openCreateModal()"
-      [raised]="true"
-      severity="primary">
-    </p-button>
+<div class="p-8 mx-auto">
+  <div class="flex justify-between items-start mb-8">
+    <div>
+      <h1 class="text-3xl font-semibold text-gray-800 mb-2">Projects</h1>
+      <p class="text-gray-600">Manage your projects and track their progress.</p>
+    </div>
+    <div class="flex gap-2">
+      <p-button
+        label="Create Project"
+        icon="pi pi-plus"
+        raised="true"
+        (onClick)="openCreateModal()"
+        [loading]="loading">
+      </p-button>
+    </div>
   </div>
 
+  <!-- Projects Table -->
   <p-card>
-    <p-table 
-      [value]="projects" 
+    <p-table
+      #table
+      [value]="projects"
       [loading]="loading"
-      [paginator]="true" 
+      [paginator]="true"
       [rows]="10"
       [showCurrentPageReport]="true"
       currentPageReportTemplate="Showing {first} to {last} of {totalRecords} projects"
-      [rowsPerPageOptions]="[5, 10, 25]"
       styleClass="p-datatable-sm">
-      
+
       <ng-template pTemplate="header">
         <tr>
           <th>Name</th>
           <th>Status</th>
           <th>Created By</th>
-          <th>Created At</th>
           <th>Last Modified</th>
           <th>Actions</th>
         </tr>
       </ng-template>
-      
+
       <ng-template pTemplate="body" let-project>
         <tr>
           <td>
             <strong>{{ project.name }}</strong>
           </td>
           <td>
-            <p-tag 
-              [value]="getStatusLabel(project.status)" 
+            <p-tag
+              [value]="getStatusLabel(project.status)"
               [severity]="getStatusSeverity(project.status)">
             </p-tag>
           </td>
           <td>{{ project.createdBy }}</td>
-          <td>{{ project.createAt | date:'short' }}</td>
           <td>{{ project.lastModifiedAt | date:'short' }}</td>
           <td>
             <div class="action-buttons">
-              <p-button 
-                icon="pi pi-pencil" 
-                [text]="true" 
+              <p-button
+                icon="pi pi-pencil"
+                [text]="true"
                 [rounded]="true"
                 severity="info"
                 size="small"
                 (onClick)="openEditModal(project)"
                 pTooltip="Edit Project">
               </p-button>
-              <p-button 
-                icon="pi pi-trash" 
-                [text]="true" 
+              <p-button
+                icon="pi pi-trash"
+                [text]="true"
                 [rounded]="true"
                 severity="danger"
                 size="small"
@@ -70,31 +74,25 @@
           </td>
         </tr>
       </ng-template>
-      
+
       <ng-template pTemplate="emptymessage">
         <tr>
-          <td colspan="6" class="text-center">
-            <div class="empty-state">
-              <i class="pi pi-folder-open" style="font-size: 3rem; color: #6c757d;"></i>
-              <p>No projects found</p>
-              <p-button 
-                label="Create your first project" 
-                icon="pi pi-plus" 
-                (onClick)="openCreateModal()"
-                [outlined]="true">
-              </p-button>
+          <td colspan="5" class="text-center">
+            <div class="text-center">
+              <p class="text-gray-600">No projects found</p>
             </div>
           </td>
         </tr>
       </ng-template>
     </p-table>
   </p-card>
-
-  <app-project-modal
-    [visible]="showModal"
-    [project]="selectedProject"
-    [isEditMode]="isEditMode"
-    (close)="onModalClose()"
-    (saved)="onProjectSaved()">
-  </app-project-modal>
 </div>
+
+<!-- Project Modal -->
+<app-project-modal
+  [visible]="showModal"
+  [project]="selectedProject"
+  [isEditMode]="isEditMode"
+  (close)="onModalClose()"
+  (saved)="onProjectSaved()">
+</app-project-modal>
